src/main/resources/assets/admin/common/styles/api/ui/treegrid/tree-grid-toolbar.less
.tree-grid-toolbar {
  position: relative;
  width: 100%;
  height: 40px;
  margin-top: -40px;
  background-color: @admin-bg-almost-white;
  display: flex;
  align-items: stretch;
  justify-content: space-between;
  border-bottom: 1px solid @admin-bg-light-gray;

  .@{_COMMON_PREFIX}button {
    .toolbar-button();

    border: none;
    flex: 0 0 auto;

    &.selection-toggler {
      flex-direction: row;
      padding: 0;

      &::before {
        font-size: 24px;
      }

      & > *:first-child {
        margin-left: 7px;
      }

      & > *:last-child {
        margin-right: 7px;
      }

      span {
        position: relative;
        display: inline-block;
        width: 18px;
        height: 18px;
        line-height: 18px;
        padding: 3px;
        border-radius: 12px;
        z-index: 1;
        text-align: center;
        background: @form-button-bg-hover;
        color: @admin-white !important;

        &:empty {
          display: none;
        }
      }

      &.active,
      &.updated {
        &:disabled {
          opacity: 1;
        }

        span {
          background: @admin-blue;
        }
      }

      &.updated span {
        animation: grow 200ms linear;
      }

      &.size-1 span {
        font-size: 13px;
      }

      &.size-2 span {
        font-size: 11px;
      }

      &.size-3 span {
        font-size: 9px;
      }

      &.size-4 span {
        font-size: 7px;
      }

      &:not(.any-selected) {
        display: none;
      }

      &.any-selected .description {
        display: flex;
        align-items: center;
        padding-left: 6px;

        &::after {
          content: attr(data-label);
          font-size: 15px;
          color: @admin-font-gray2;
        }
      }

      &:disabled::after {
        display: none;
      }

      &.active::after {
        color: @admin-button-blue2;
      }

      &:not(.active)::after {
        color: @admin-font-gray2;
      }
    }

    &.@{_COMMON_PREFIX}icon-loop {
      float: right;
      padding: 0 14px 0 14px;
    }

    &:focus {
      box-shadow: none;
      border: none;
    }
  }

  .selection-controller {
    display: inline-block;
    width: 13px;
    line-height: 40px;
    padding: 0 5px 0 11px;
    align-self: center;

    label {
      display: inline-block;
      width: 100%;
      height: 100%;
      padding: 0;
      vertical-align: middle;
    }
  }

  .fold-button {
    .@{_COMMON_PREFIX}dropdown {
      button {
        &:not(:disabled) span {
          color: @admin-button-blue2;
        }

        &:hover:not(:disabled) span {
          color: @admin-button-blue3;
        }
      }
    }
  }

  .left-wrapper,
  .center-wrapper,
  .right-wrapper {
    display: flex;
    flex: 1 1;
    align-items: stretch;

    > * {
      flex: 0 0 auto;
    }
  }

  .left-wrapper {
    justify-content: flex-start;
  }

  .center-wrapper {
    flex: 0 0 auto;
  }

  .right-wrapper {
    justify-content: flex-end;
  }
}

body {
  &._0-240,
  &._240-360,
  &._360-540,
  &._540-720 {
    .tree-grid-toolbar {
      .left-wrapper {
        order: 3;
        flex: 0 0 auto;
        min-width: 0;
        flex-direction: row-reverse;
      }

      .center-wrapper {
        padding-left: 17px;
      }

      .@{_COMMON_PREFIX}button.@{_CLS_PREFIX}icon-loop {
        float: left;
        padding: 0 0 0 16px;
      }

      .selection-controller {
        padding: 0 17px 0 5px;
      }
    }
  }
}

@keyframes grow {
  0%, 100% {
    transform: scale(1);
  }

  50% {
    transform: scale(1.2);
  }
}

